sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:22: error: ';' expected but 'if' found.
		} if (!x) {return}
                  ^